제발 도와줘 나좀 살려줘

--- a/backend/src/main/resources/templates/board.html
+++ b/backend/src/main/resources/templates/board.html
@@ -38,7 +38,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h1 class="my-4">Board List</h1>
+      <h1 class="my-4">PCB</h1>
 
       <div id="boardsContainer">
         <!-- 게시글 리스트가 출력될 공간, 여기에 JS를 이용해 게시글을 동적으로 추가할 예정 -->
@@ -48,6 +48,6 @@
 </div>
 
 <!-- JavaScript 코드가 포함된 파일을 연결 -->
-<script th:src="@{/js/board.js}"></script>
+<script th:src="@{/js/Main.js}"></script>
 </body>
 </html>
