--- a/backend/src/main/resources/templates/main.html
+++ b/backend/src/main/resources/templates/main.html
@@ -48,6 +48,6 @@
 </div>
 
 <!-- JavaScript 코드가 포함된 파일을 연결 -->
-<script th:src="@{/js/Main.js}"></script>
+<script th:src="@{/js/main.js}"></script>
 </body>
 </html>
