--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -1,151 +1,75 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="/css/style-session.css">
-  <base href="/signup">
-  <title>econoshop-signup</title>
-  <style>
-    /* 전체 컨테이너 스타일 */
-    body {
-      background-color: #f1f1f1;
-      font-family: Arial, sans-serif;
-    }
-
-    .container {
-      max-width: 400px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 5px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    /* 로고 스타일 */
-    .main-titleBox {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .main-title {
-      font-size: 24px;
-      font-weight: bold;
-      color: #333;
-      background-color: transparent;
-      border: none;
-      cursor: pointer;
-    }
-
-    /* 제목 스타일 */
-    .sub-title {
-      text-align: center;
-      font-size: 20px;
-      margin-top: 20px;
-      color: #333;
-    }
-
-    /* 링크 스타일 */
-    .private-a-box {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 20px;
-    }
-
-    .private-a-box a {
-      text-decoration: none;
-      color: #666;
-      font-size: 14px;
-    }
-
-    /* 폼 스타일 */
-    .sign-up-form {
-      margin-top: 40px;
-    }
-
-    .input-form .container {
-      background-color: #fff;
-      border-radius: 5px;
-      padding: 20px;
-    }
-
-    .input-form .container input[type="text"],
-    .input-form .container input[type="password"],
-    .input-form .container input[type="email"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 3px;
-    }
-
-    /* 버튼 스타일 */
-    .clearfix {
-      margin-top: 20px;
-      text-align: right;
-    }
-
-    .clearfix button {
-      padding: 10px 20px;
-      margin-left: 10px;
-      border-radius: 5px;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .cancelbtn {
-      background-color: #ccc;
-      color: #fff;
-    }
-
-    .signupbtn {
-      background-color: #6c757d;
-      color: #fff;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="/css/style-session.css" />
+  <base href="/signup" />
+  <title>pcb-signup</title>
+  <link rel="stylesheet" href="/css/signup.css" />
 </head>
-
 <body>
 <div class="main-titleBox">
-  <button class="main-title" onclick="goNewPage('/')">PCB</button>
-</div>
-<h1 class="sub-title">회원가입</h1>
-<!-- 링크 -->
-<div class="private-a-box">
-  <a class="a to-login" href="http://localhost:8080/login">로그인</a>
-
+  <button class="main-title" onclick="goNewPage('/')">Join PCB</button>
 </div>
 <!-- 로그인 폼 -->
 <div class="sign-up-form">
-  <form action="/users/create" method="post" class="input-form" name="inputForm" novalidate>
+  <form
+          action="/users/create"
+          method="post"
+          class="input-form"
+          name="inputForm"
+          enctype='multipart/form-data'
+          novalidate
+  >
     <div class="container">
       <div class="id box">
-        <input class='input-id' type="text" placeholder="ID*" name="id" maxlength="20" required>
-        <span class="id-invalid-check">PLEASE ENTER ID</span>
+        <div>ID</div>
+        <input
+                class="input-id"
+                type="text"
+                placeholder="아이디 입력 (문자, 숫자 포함 5~20자)"
+                name="id"
+                maxlength="20"
+                required
+        />
       </div>
-      <br>
-      <div class="pw-container">
-        <div class="pw box">
-          <input class='input-pw' type="password" placeholder="PASSWORD*" name="psw" maxlength="20" required>
-          <span class="pw-invalid-check">PLEASE ENTER PW</span>
-        </div>
-        <div class="pwr box">
-          <input class='input-pwrepeat' type="password" placeholder="REPEAT PASSWORD*" name="pswRepeat" maxlength="20" required>
-          <span class="pwr-invalid-check">PLEASE REPEAT PW</span>
-        </div>
+      <div class="pw box">
+        <div>Password</div>
+        <input
+                class="input-pw"
+                type="password"
+                placeholder="비밀번호 입력 (문자, 숫자, 특수문자 포함 5~20자)"
+                name="psw"
+                maxlength="20"
+                required
+        />
+      </div>
+      <div class="nickname box">
+        <div>Nickname</div>
+        <input
+                class="nickname"
+                type="text"
+                placeholder="닉네임 입력 (문자, 숫자 포함 1~20자)"
+                name="nickname"
+                maxlength="20"
+                required
+        />
       </div>
 
       <div class="clearfix">
-        <button type="button" class="cancelbtn">Cancel</button>
         <button type="submit" class="signupbtn">SIGN UP</button>
       </div>
     </div>
   </form>
+  <div class="go-login">
+    회원이신가요?
+    <a class="a to-login" href="http://localhost:8080/login"
+    ><strong>로그인</strong></a
+    >
+  </div>
 </div>
-<script src="/js/domain/signup.js"></script>
+<script th:src="@{/js/signup.js}"></script>
 </body>
-
 </html>
