나좀 살려줘

--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/css/style-session.css" />
-    <base href="/signup" />
-    <title>pcb-login</title>
-    <link rel="stylesheet" href="/css/login.css" />
-  </head>
-  <body>
-    <div class="main-titleBox">
-      <button class="main-title" onclick="goNewPage('/')">Login PCB</button>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="/css/login.css" />
+  <base href="/signup" />
+  <title>pcb-login</title>
+  <link rel="stylesheet" href="/css/login.css" />
+</head>
+<body>
+<div class="main-header">
+  <button class="main-header-btn" onclick="goToMain()">Main</button>
+</div>
+<div class="main-titleBox">
+  <button class="main-title" onclick="goNewPage('/main')">Login PCB</button>
+</div>
     <!-- 로그인 폼 -->
     <div class="sign-up-form">
       <form
