--- a/backend/src/main/resources/templates/main.html
+++ b/backend/src/main/resources/templates/main.html
@@ -31,15 +31,39 @@
       font-size: 12px;
       color: gray;
     }
-  </style>
 
+    .jumbotron {
+      text-align: center;
+      margin-top: 30px;
+      padding: 30px;
+    }
+
+    .jumbotron h1 {
+      font-size: 50px;
+    }
+
+    #userActions {
+      position: relative;
+      left: 10%; /* 버튼을 왼쪽으로 이동 */
+    }
+
+    #userActions .btn {
+      padding: 5px 20px;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
+  <div class="jumbotron">
+    <h1 class="display-1">PCB</h1>
+    <div id="userActions" class="d-flex justify-content-start mb-1">
+      <button id="signup" class="btn btn-primary mr-2">회원가입</button>
+      <button id="login" class="btn btn-secondary">로그인</button>
+    </div>
+  </div>
   <div class="row">
     <div class="col-12">
-      <h1 class="my-4">PCB</h1>
-
       <div id="boardsContainer">
         <!-- 게시글 리스트가 출력될 공간, 여기에 JS를 이용해 게시글을 동적으로 추가할 예정 -->
       </div>
