--- a/backend/src/main/resources/templates/board.html
+++ b/backend/src/main/resources/templates/board.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pcb-post</title>
-    <link rel="stylesheet" href="/css/post.css" />
+    <link rel="stylesheet" href="/css/board.css" />
   </head>
   <body>
     <nav>
@@ -15,14 +15,9 @@
     <form>
       <div class="container">
         <!-- 전부 임시데이터-->
-        <div class="tag">#A #Apple</div>
-        <div class="title">
-          Database 과제
-        </div>
+        <div class="title">Database 과제</div>
         <div class="writer">이진혁</div>
-        <div class="content">
-          이것은 database 과제입니다
-        </div>
+        <div class="content">이것은 database 과제입니다</div>
         <div class="writebtn">
           <button type="submit">참여하기</button>
         </div>
