--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -71,6 +71,6 @@
         <a class="a to-login" href="/users/login"><strong>로그인</strong></a>
       </div>
     </div>
-    <script src="/js/signup.js"></script>
+    <script th:src="@{/js/signup.js}"></script>
   </body>
 </html>
