--- a/backend/src/main/resources/templates/main.html
+++ b/backend/src/main/resources/templates/main.html
@@ -1,77 +1,86 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <title>Board List</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <title>Board List</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Bootstrap CSS link -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS link -->
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- JQuery library link -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- JQuery library link -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <!-- Custom CSS -->
-  <style>
-    #boardsContainer {
-      margin-top: 20px;
-    }
+    <!-- Custom CSS -->
+    <style>
+      #boardsContainer {
+        margin-top: 20px;
+      }
 
-    .boardItem {
-      background-color: #f7f7f7;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
+      .boardItem {
+        background-color: #f7f7f7;
+        padding: 10px;
+        margin-bottom: 10px;
+      }
 
-    .title {
-      font-weight: bold;
-    }
+      .title {
+        font-weight: bold;
+      }
 
-    .createdAt {
-      font-size: 12px;
-      color: gray;
-    }
+      .createdAt {
+        font-size: 12px;
+        color: gray;
+      }
 
-    .jumbotron {
-      text-align: center;
-      margin-top: 30px;
-      padding: 30px;
-    }
+      .jumbotron {
+        text-align: center;
+        margin-top: 30px;
+        padding: 30px;
+      }
 
-    .jumbotron h1 {
-      font-size: 50px;
-    }
+      .jumbotron h1 {
+        font-size: 50px;
+      }
 
-    #userActions {
-      position: relative;
-      left: 10%; /* 버튼을 왼쪽으로 이동 */
-    }
+      #userActions {
+        position: relative;
+        left: 10%; /* 버튼을 왼쪽으로 이동 */
+      }
 
-    #userActions .btn {
-      padding: 5px 20px;
-      font-size: 14px;
-    }
-  </style>
-</head>
-<body>
-<div class="container">
-  <div class="jumbotron">
-    <h1 class="display-1">PCB</h1>
-    <div id="userActions" class="d-flex justify-content-start mb-1">
-      <button id="signup" class="btn btn-primary mr-2">회원가입</button>
-      <button id="login" class="btn btn-secondary">로그인</button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12">
-      <div id="boardsContainer">
-        <!-- 게시글 리스트가 출력될 공간, 여기에 JS를 이용해 게시글을 동적으로 추가할 예정 -->
+      #userActions .btn {
+        padding: 5px 20px;
+        font-size: 14px;
+      }
+      #write {
+        background: white;
+        color: black;
+        margin-right: 8px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-1">PCB</h1>
+        <div id="userActions" class="d-flex justify-content-start mb-1">
+          <button id="write" class="btn">글쓰기</button>
+          <button id="signup" class="btn btn-primary mr-2">회원가입</button>
+          <button id="login" class="btn btn-secondary">로그인</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div id="boardsContainer">
+            <!-- 게시글 리스트가 출력될 공간, 여기에 JS를 이용해 게시글을 동적으로 추가할 예정 -->
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<!-- JavaScript 코드가 포함된 파일을 연결 -->
-<script th:src="@{/js/main.js}"></script>
-</body>
+    <!-- JavaScript 코드가 포함된 파일을 연결 -->
+    <script th:src="@{/js/main.js}"></script>
+  </body>
 </html>
